@@ -1,14 +1,8 @@
-# Full Stack Scala on Heroku
-
-This is an example of a full stack Scala application deployed on
-Heroku. See this [blog post](https://medium.com/@antoine.doeraene/deploying-a-full-stack-scala-application-on-heroku-6d8093a913b3).
-
-## Stack
+# ACUMEN 3.0
+This is the web version of Acumen, hosted on Heroku.
 
 The backend uses the Play framework, together with Slick to access a
-postgres database.
-
-The frontend uses the Laminar framework for UI rendering.
+postgres database. The frontend uses the Laminar framework for UI rendering.
 
 ## Dev environment
 To compile locally the full application, you must first clone the repository:
@@ -17,7 +11,7 @@ git clone https://github.com/affraike/full_scale_scala_app.git
 cd full_scale_scala_app
 ```
 
-First, make sure that the file 'backend/conf/application.conf' is in this configuration :
+Then, make sure that the file 'backend/conf/application.conf' is in this configuration :
 ```
 slick.dbs.default {
   db = {
@@ -33,7 +27,7 @@ slick.dbs.default {
 }
 ```
 
-Then, you can use, in one command line (terminal)
+Next, you can use, in one command line (terminal)
 ```bash
 # Frontend hot reload only on localhost:8080
 sbt dev
@@ -43,14 +37,12 @@ and in another,
 # Backend hot reload only on localhost:9000
 sbt backend/run
 ```
+Finally, open the browser on localhost:8080.
 
 Please note that Acumen desktop api can no longer be launched inside the app.
 
 ## Deploy
-
-The app is hosted on Heroku. In order to deploy,
-
-First, make sure that the file 'backend/conf/application.conf' is in this configuration :
+In order to deploy, make sure that the file 'backend/conf/application.conf' is in this configuration :
 ```
 slick.dbs.default {
   db = {
@@ -72,19 +64,11 @@ Then, in a terminal,
 heroku login
 
 # Make sure to use the same name as in project/BackendSettings.scala
-heroku apps:create full-stack-scala-example --region eu
+heroku apps:create APPNAME --region eu
 heroku addons:create heroku-postgresql:hobby-dev
 
 # Create a secret for the Play application
 heroku config:set APPLICATION_SECRET=mycoolsecret
 
-# Optional
-export SBT_OPTS="-Xmx6G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=6G -Xss2M  -Duser.timezone=GMT"
-
 sbt clean stage backend/deployHeroku
-```
-
-To see the files on the deployed server:
-```
-heroku run bash --app APPNAME
 ```
